# RTCW-SP

./: .gitignore  CMakeLists.txt  README.MD  README.txt  generate_vs.bat
src/: wolf.sln  wolf.vcxproj  wolf.vcxproj.filters
src/botlib/: botlib.vcxproj  botlib.vcxproj.filters
src/cgame/: cgame.vcxproj  cgame.vcxproj.filters  tr_types.h
src/extractfuncs/: extractfuncs.ilk  extractfuncs.vcxproj  extractfuncs.vcxproj.filters
src/ft2/: ftgrays.c
src/game/: bg_lib.c  g_local.h  g_main.c  g_save.c  game.vcxproj  game.vcxproj.filters
src/qcommon/: common.c  vm_x86_64.c
src/renderer/: qgl.h  renderer.vcxproj  renderer.vcxproj.filters  tr_animation.c  tr_backend.c  tr_cmds.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_model.c  tr_shade.c  tr_shader.c
src/splines/: Splines.vcxproj  Splines.vcxproj.filters  splines.cpp  splines.h  util_list.h
src/ui/: ui.vcxproj  ui.vcxproj.filters
src/win32/: glw_win.h  steamPath.cpp  steamPath.h  wglewInit.cpp  wglewInit.h  win_gamma.c  win_glimp.c  win_local.h  win_main.c  win_qgl.c  win_shared.c  winquake.aps
